<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">p≡p</string>
    <string name="app_authors">The K-9 Dog Walkers, p≡p Security S.A.</string>
    <string name="app_copyright_fmt">Copyright 2019  p≡p Security S.A. Copyright 2008-<xliff:g>%1$s</xliff:g> The K-9 Dog Walkers. Portions Copyright 2006-<xliff:g>%2$s</xliff:g> the Android Open Source Project.</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="account_recreate_dlg_instructions_fmt">All local data for \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="account_clear_dlg_instructions_fmt">Local copies of messages in \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="import_dialog_error_message">Please install a file manager to continue with this import.</string>
    <string name="open_market">Open Play Store</string>
    <string name="app_authors_fmt">Authors: <xliff:g id="app_authors">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">We\'re using the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_emoji_icons">Emoji icons: <xliff:g id="app_emoji_icons_link">%s</xliff:g></string>
    <string name="read_attachment_label">Read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="read_messages_label">Read Emails</string>
    <string name="read_messages_desc">Allows this application to read your Emails.</string>
    <string name="delete_messages_label">Delete Emails</string>
    <string name="delete_messages_desc">Allows this application to delete your Emails.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">Accounts</string>
    <string name="folders_title">Folders</string>
    <string name="advanced">Advanced</string>
    <string name="message_list_title"><xliff:g id="account">%1$s</xliff:g>:<xliff:g id="folder">%2$s</xliff:g> </string>
    <string name="compose_title_compose">Compose</string>
    <string name="compose_title_reply">Reply</string>
    <string name="compose_title_reply_all">Reply all</string>
    <string name="compose_title_forward">Forward</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="status_loading_account_folder">Poll <xliff:g id="account">%1$s</xliff:g>:<xliff:g id="folder">%2$s</xliff:g><xliff:g id="progress">%3$s</xliff:g></string>
    <string name="status_loading_account_folder_headers">Fetching headers <xliff:g id="account">%1$s</xliff:g>:<xliff:g id="folder">%2$s</xliff:g><xliff:g id="progress">%3$s</xliff:g></string>
    <string name="status_sending_account">Sending <xliff:g id="account">%1$s</xliff:g><xliff:g id="progress">%2$s</xliff:g></string>
    <string name="status_processing_account">Proc <xliff:g id="account">%1$s</xliff:g>:<xliff:g id="command">%2$s</xliff:g><xliff:g id="progress">%3$s</xliff:g></string>
    <string name="folder_progress">\u0020<xliff:g id="completed">%1$d</xliff:g>/<xliff:g id="total">%2$d</xliff:g></string>
    <string name="status_next_poll">Next poll <xliff:g id="nexttime">%s</xliff:g></string>
    <string name="status_no_network">Sync disabled - No network</string>
    <string name="status_no_background">Sync disabled - No background activity</string>
    <string name="status_poll_and_push_disabled">Polling and pushing disabled</string>
    <string name="status_syncing_blocked">Syncing blocked</string>
    <string name="status_syncing_off">Syncing disabled</string>
    <string name="status_syncing">Syncing messages</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="move_action">Move</string>
    <string name="single_message_options_action">Send…</string>
    <string name="refile_action">Refile…</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_results">Search results</string>
    <string name="action_settings">Settings</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="clear_pending_action">Clear pending actions (danger!)</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="select_text_action">Select text</string>
    <string name="show_headers_action">Show headers</string>
    <string name="hide_headers_action">Hide headers</string>
    <plurals name="copy_address_to_clipboard">
        <item quantity="one">Address copied to clipboard</item>
        <item quantity="other">Addresses copied to clipboard</item>
    </plurals>
    <string name="message_view_theme_action_dark">Switch to dark theme</string>
    <string name="message_view_theme_action_light">Switch to light theme</string>
    <string name="mark_as_unread_action">Mark unread</string>
    <string name="read_receipt">Read receipt</string>
    <string name="read_receipt_enabled">Will request read receipt</string>
    <string name="read_receipt_disabled">Will not request read receipt</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="clear_local_folder_action">Clear local messages</string>
    <string name="about_action">About</string>
    <string name="prefs_title">Settings</string>
    <string name="accounts_context_menu_title">Account options</string>
    <string name="general_no_subject">(No subject)</string>
    <string name="general_no_sender">No sender</string>
    <string name="status_loading">Polling</string>
    <string name="status_loading_more">Loading messages\u2026</string>
    <string name="status_network_error">Connection error</string>
    <string name="status_invalid_id_error">Message not found</string>
    <string name="status_loading_error">Message loading error</string>
    <string name="status_loading_more_failed">Retry loading more messages</string>
    <string name="load_more_messages_fmt">Load up
    to <xliff:g id="messages_to_load">%d</xliff:g> more</string>
    <string name="abbrev_gigabytes">GB</string>
    <string name="abbrev_megabytes">MB</string>
    <string name="abbrev_kilobytes">KB</string>
    <string name="abbrev_bytes">B</string>
    <string name="account_size_changed">Account \"<xliff:g id="account">%1$s</xliff:g>\" shrunk from <xliff:g id="oldSize">%2$s</xliff:g> to <xliff:g id="newSize">%3$s</xliff:g></string>
    <string name="compacting_account">Compacting account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="from_same_sender">More from this sender</string>
    <string name="debug_delete_local_body">Debug / Clear message body</string>
    <string name="account_setup_basics_email_hint">Email address</string>
    <string name="account_setup_basics_password_hint">Password</string>
    <string name="account_setup_basics_show_password">Show password</string>
    <string name="account_setup_outgoing_password_label">Password</string>
    <string name="account_settings_title_fmt">Account settings</string>
    <string name="account_settings_email_label">Your email address</string>
    <string name="account_settings_default_quoted_text_shown_label">Quote message when replying</string>
    <string name="account_settings_default_quoted_text_shown_summary">Include the original message in your reply.</string>
    <string name="account_settings_mail_display_count_label">Local folder size</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_name_label">Your name</string>
    <string name="account_settings_composition_label">Composition defaults</string>
    <string name="account_settings_always_bcc_label">Bcc all messages to</string>
    <string name="edit_identity_description_label">Identity description</string>
    <string name="edit_identity_description_hint">(Optional)</string>
    <string name="edit_identity_name_label">Your name</string>
    <string name="edit_identity_name_hint">(Optional)</string>
    <string name="edit_identity_email_label">Email address</string>
    <string name="edit_identity_email_hint">(Required)</string>
    <string name="edit_identity_reply_to_label">Reply-to address</string>
    <string name="edit_identity_reply_to_hint">(Optional)</string>
    <string name="edit_identity_signature_label">Signature</string>
    <string name="edit_identity_signature_hint">(Optional)</string>
    <string name="account_settings_signature_use_label">Use Signature</string>
    <string name="account_settings_signature_label">Signature</string>
    <string name="account_settings_signature__location_label">Signature position</string>
    <string name="account_settings_signature__location_before_quoted_text">Before quoted message</string>
    <string name="account_settings_signature__location_after_quoted_text">After quoted message</string>
    <string name="display_preferences">Display</string>
    <string name="global_preferences">Global</string>
    <string name="privacy_preferences">Privacy</string>
    <string name="settings_theme_label">Theme</string>
    <string name="settings_language_label">Language</string>
    <string name="account_settings_remote_search_num_label">Server search limit</string>
    <string name="account_settings_remote_search_enabled">Enable server search</string>
    <string name="account_settings_remote_search_enabled_summary">Search messages on the server in addition to those on your device</string>
    <string name="account_setup_basics_client_certificate">Use client certificate</string>
    <string name="client_certificate_advanced_options">Advanced options</string>
    <string name="add_from_contacts">Add from Contacts</string>
    <string name="general_settings_title">General settings</string>
</resources>