<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete_action"
        app:showAsAction="always" />
    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_content_archive"
        android:title="@string/archive_action"
        app:showAsAction="always" />
    <item
        android:id="@+id/select"
        android:title="@string/select_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/deselect"
        android:title="@string/deselect_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/reply_all"
        android:title="@string/reply_all_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/reply"
        android:title="@string/reply_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/send_again"
        android:title="@string/send_again_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/forward"
        android:title="@string/forward_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/mark_as_read"
        android:title="@string/mark_as_read_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/mark_as_unread"
        android:title="@string/mark_as_unread_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/move"
        android:title="@string/move_action"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/copy"
        android:title="@string/copy_action"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/flag"
        android:title="@string/flag_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/unflag"
        android:title="@string/unflag_action"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/spam"
        android:title="@string/spam_action"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/same_sender"
        android:title="@string/from_same_sender"
        app:showAsAction="never" />
    <item
        android:id="@+id/debug_delete_locally"
        android:title="@string/debug_delete_local_body"
        app:showAsAction="never" />
</menu>
