<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="main"
    android:title="@string/account_settings_title_fmt">

    <com.takisoft.preferencex.AutoSummaryEditTextPreference
        android:dialogTitle="@string/account_settings_description_label"
        android:key="account_description"
        android:title="@string/account_settings_description_label" />

    <ListPreference
        android:dialogTitle="@string/account_settings_mail_display_count_label"
        android:entries="@array/display_count_entries"
        android:entryValues="@array/display_count_values"
        android:key="account_display_count"
        android:summary="%s"
        android:title="@string/account_settings_mail_display_count_label" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="default_quoted_text_shown"
        android:summary="@string/account_settings_default_quoted_text_shown_summary"
        android:title="@string/account_settings_default_quoted_text_shown_label" />

    <CheckBoxPreference
        android:key="remote_search_enabled"
        android:summary="@string/account_settings_remote_search_enabled_summary"
        android:title="@string/account_settings_remote_search_enabled" />

    <ListPreference
        android:dependency="remote_search_enabled"
        android:dialogTitle="@string/account_settings_remote_search_num_label"
        android:entries="@array/remote_search_num_results_entries"
        android:entryValues="@array/remote_search_num_results_values"
        android:key="account_remote_search_num_results"
        android:summary="%s"
        android:title="@string/account_settings_remote_search_num_label" />

    <PreferenceScreen
        android:title="@string/account_settings_composition_label"
        android:key="composition_settings">
        <SwitchPreferenceCompat
            android:key="composition_use_signature"
            android:title="@string/account_settings_signature_use_label"
            android:summary="@string/account_settings_signature_summary"
            android:defaultValue="true"/>
        <com.fsck.k9.ui.settings.account.SignaturePreference
            android:dialogTitle="@string/account_settings_signature_label"
            android:key="composition_signature"
            android:title="@string/account_settings_signature_label"
            android:summary="Signature used on new mails"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:icon="?attr/iconplanckShield"
        android:title="@string/privacy_preferences"
        android:key="pep">
        <PreferenceCategory
            app:key="pep_related_settings"
            app:allowDividerAbove="false">

            <SwitchPreferenceCompat
                android:key="pep_disable_privacy_protection"
                android:title="@string/pep_enable_privacy_protection"
                android:defaultValue="false"
                android:summary="@string/pep_account_privacy_protection_explanation" />
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>
