<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_attachment"
        android:alphabeticShortcut="n"
        android:icon="?attr/iconActionAddAttachment"
        android:title="@string/add_attachment_action"
        app:showAsAction="always" />
    <item
        android:id="@+id/send"
        android:alphabeticShortcut="s"
        android:icon="?attr/iconActionSend"
        android:title="@string/send_action"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_from_contacts"
        android:alphabeticShortcut="a"
        android:title="@string/add_from_contacts" />

    <item
        android:id="@+id/save"
        android:alphabeticShortcut="d"
        android:icon="?attr/iconActionSave"
        android:title="@string/save_draft_action" />
    <item
        android:id="@+id/discard"
        android:alphabeticShortcut="q"
        android:icon="?attr/iconActionCancel"
        android:title="@string/discard_action" />

    <item
        android:id="@+id/reset_partner_keys"
        app:showAsAction="never"
        android:title="@string/reset_partner_key_action"
        android:visible="false"/>
</menu>
