<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/general_settings_title">

    <PreferenceScreen
        android:icon="?attr/iconPreferencesDisplay"
        android:key="display_preferences"
        android:title="@string/display_preferences">

        <PreferenceCategory
            android:key="global_preferences"
            android:title="@string/global_preferences">

            <com.fsck.k9.ui.settings.general.LanguagePreference
                android:dialogTitle="@string/settings_language_label"
                android:entries="@array/language_entries"
                android:entryValues="@array/language_values"
                android:key="language"
                android:summary="%s"
                android:title="@string/settings_language_label" />

            <ListPreference
                android:dialogTitle="@string/settings_theme_label"
                android:entries="@array/theme_entries"
                android:entryValues="@array/theme_values"
                android:key="theme"
                android:summary="%s"
                android:title="@string/settings_theme_label" />
        </PreferenceCategory>

    </PreferenceScreen>

    <Preference
        android:key="pep_key_reset"
        android:summary="@string/pep_key_reset_all_own_ids_summary"
        android:title="@string/reset" />

</PreferenceScreen>
