<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/simple_toolbar_layout" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_identity_description_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_identity_description_hint"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_identity_name_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_identity_name_hint"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_identity_email_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_identity_email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_identity_reply_to_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/reply_to"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_identity_reply_to_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            <!-- 
        <TextView
            android:text="@string/edit_identity_always_bcc_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />
        <EditText
            android:id="@+id/account_always_bcc"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />
            -->
            <CheckBox
                android:id="@+id/signature_use"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_settings_signature_use_label" />

            <LinearLayout
                android:id="@+id/signature_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_identity_signature_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <EditText
                    android:id="@+id/signature"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_identity_signature_hint"
                    android:singleLine="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>