<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context="com.fsck.k9.pEp.ui.fragments.AccountSetupBasicsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:fadingEdge="none"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideInset" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_email"
                    android:hint="@string/account_setup_basics_email_hint"
                    android:textColorHint="?attr/grayScaleColorOnBackground4"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:fontFamily="sans-serif"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:contentDescription="@string/account_settings_email_label"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:passwordToggleEnabled="true"
                custom:passwordToggleContentDescription="@string/account_setup_basics_show_password">

                <EditText
                    android:id="@+id/account_password"
                    android:inputType="textPassword"
                    android:hint="@string/account_setup_basics_password_hint"
                    android:textColorHint="?attr/grayScaleColorOnBackground4"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:layout_width="fill_parent"
                    android:nextFocusDown="@+id/next"
                    android:contentDescription="@string/account_setup_outgoing_password_label"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.fsck.k9.view.ClientCertificateSpinner
                android:id="@+id/account_client_certificate_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.fsck.k9.view.FoldableLinearLayout
                android:id="@+id/foldable_advanced_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                custom:foldedLabel="@string/client_certificate_advanced_options"
                custom:unFoldedLabel="@string/client_certificate_advanced_options" >

                <CheckBox
                    android:id="@+id/account_client_certificate"
                    android:layout_width="fill_parent"
                    android:fontFamily="sans-serif"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_basics_client_certificate" />


            </com.fsck.k9.view.FoldableLinearLayout>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/wizard_setup" />

</LinearLayout>
