<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/simple_toolbar_layout" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="8dp"
        android:clipToPadding="false"
        android:fadingEdge="none"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_settings_name_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_settings_name_label"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_settings_email_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_settings_email_label"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_settings_always_bcc_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_always_bcc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_settings_always_bcc_label"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/account_signature_use"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_settings_signature_use_label" />

            <LinearLayout
                android:id="@+id/account_signature_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_settings_signature_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <EditText
                    android:id="@+id/account_signature"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_settings_signature_label"
                    android:inputType="textMultiLine|textAutoCorrect|textCapSentences" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_settings_signature__location_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <RadioGroup
                    android:id="@+id/account_signature_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/account_signature_location_before_quoted_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/account_settings_signature__location_label"
                        android:text="@string/account_settings_signature__location_before_quoted_text" />

                    <RadioButton
                        android:id="@+id/account_signature_location_after_quoted_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/account_settings_signature__location_label"
                        android:text="@string/account_settings_signature__location_after_quoted_text" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>